--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
-	<h1 class="title">Esta es mi rutina de estudio</h1>
+	<div class="bar-nav">
+	   <h1 class="title">Esta es mi rutina de estudio</h1>
+    </div>
+
 <div id="contenedor">
 	<div class="estudio">
 		<h3>8:00 A.M - 10:00 A.M</h3>
