Agrego dos cajas nuevas

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
 
     	<p>En esta hora y media me pondre a hacer el resto de los deberes de la casa que me quedaron y vere las cosas pequeñas</p>
     </div>
+
+    <div class="estudio">
+    	<h3>04:00 P.M - 08:00</h3>
+
+    	<p>En este lapso de 4 horas llega mi mamá y le ayudo a hacer la comida, le ayudo en lo que me pida y ocupe</p>
+    </div>
+
+    <div class="estudio">
+    	<h3>08:00 P.M - 10:00</h3>
+
+    	<p>Despues levanto la mesa y me preparo para salir un rato a distraerme</p>
+    </div>
 </div>
 </body>
 </html>
