--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="estudio">
 		<h3>8:00 A.M - 10:00 A.M</h3>
 
-		<p>En estas 2 horas me levantare y tendere mi cama, tambien me preparare un cafe y leeré una capitulo de la Biblia</p>
+		<p>En estas 2 horas me levantare y tenderé mi cama, me prepararé un cafe y leeré algun libro</p>
 	</div>
 
     <div class="estudio">
@@ -40,19 +40,19 @@
     <div class="estudio">
     	<h3>01:30 P.M - 02:30 P.M</h3>
 
-    	<p>En esta hora me dedicare a mi estudio autodidacta de el desarrollo web</p>
+    	<p>En esta hora me dedicare a mi estudio autodidacta de el desarrollo web y vere algunos videos sobre psicologia</p>
     </div>
 
     <div class="estudio">
     	<h3>02:30 P.M - 04:00</h3>
 
-    	<p>En esta hora y media me pondre a hacer el resto de los deberes de la casa que me quedaron y vere las cosas pequeñas</p>
+    	<p>En esta hora y media me pondre a hacer el resto de los deberes de la casa que me quedaron</p>
     </div>
 
     <div class="estudio">
     	<h3>04:00 P.M - 08:00</h3>
 
-    	<p>En este lapso de 4 horas llega mi mamá y le ayudo a hacer la comida, le ayudo en lo que me pida y ocupe</p>
+    	<p>En este lapso pasare tiempo con mi familia y comeré</p>
     </div>
 
     <div class="estudio">
@@ -60,6 +60,15 @@
 
     	<p>Despues levanto la mesa y me preparo para salir un rato a distraerme</p>
     </div>
+
+      <div class="estudio">
+    	<h3>10:00 P.M - 11:00</h3>
+
+    	<p>En este tiempo ya me estare preparando para dormir, me bañare y hare las cosas necesarias</p>
+    </div>
+
+
+
 </div>
 </body>
 </html>
