Le puse un hover a el bar-nav

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     	<h3>11:00 A.M - 01:00 P.M</h3>
 
     	<p>En estas 2 horas me pondre a hacer
-    	2/4 partes de los deberes de la casa y ajustare mi tiempo para comer</p>
+    	2/4 partes de los deberes de la casa y me hare algo para comer</p>
     </div>
 
     <div class="estudio">
