--- a/index.html
+++ b/index.html
@@ -1,74 +1,78 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Rutina de estudio</title>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
+
 <body>
 	<div class="bar-nav">
-	   <h1 class="title">Esta es mi rutina de estudio</h1>
-    </div>
-
-<div id="contenedor">
-	<div class="estudio">
-		<h3>8:00 A.M - 10:00 A.M</h3>
-
-		<p>En estas 2 horas me levantare y tenderé mi cama, me prepararé un cafe y leeré algun libro</p>
+		<h1 class="title">Esta es mi rutina de estudio</h1>
 	</div>
 
-    <div class="estudio">
-    	<h3>10:00 A.M - 11:00 A.M</h3>
+	<div id="contenedor">
+		<div class="estudio">
+			<h3>8:00 A.M - 10:00 A.M</h3>
 
-    	<p>En esta hora me relajare y me distraere con algun juego</p>
-    </div>
+			<p>En estas 2 horas me levantare y tenderé mi cama, me prepararé un cafe y leeré algun libro</p>
+		</div>
 
-    <div class="estudio">
-    	<h3>11:00 A.M - 01:00 P.M</h3>
+		<div class="estudio">
+			<h3>10:00 A.M - 11:00 A.M</h3>
 
-    	<p>En estas 2 horas me pondre a hacer
-    	2/4 partes de los deberes de la casa y me hare algo para comer</p>
-    </div>
+			<p>En esta hora me relajare y me distraere con algun juego</p>
+		</div>
 
-    <div class="estudio">
-    	<h3>01:00 P.M - 01:30 P.M</h3>
+		<div class="estudio">
+			<h3>11:00 A.M - 01:00 P.M</h3>
 
-    	<p>En este lapso de 30 minutos reposare la comida y me relajare un poco con algun snack</p>
-    </div>
+			<p>En estas 2 horas me pondre a hacer
+				2/4 partes de los deberes de la casa y me hare algo para comer</p>
+		</div>
 
-    <div class="estudio">
-    	<h3>01:30 P.M - 02:30 P.M</h3>
+		<div class="estudio">
+			<h3>01:00 P.M - 01:30 P.M</h3>
 
-    	<p>En esta hora me dedicare a mi estudio autodidacta de el desarrollo web y vere algunos videos sobre psicologia</p>
-    </div>
+			<p>En este lapso de 30 minutos reposare la comida y me relajare un poco con algun snack</p>
+		</div>
 
-    <div class="estudio">
-    	<h3>02:30 P.M - 04:00</h3>
+		<div class="estudio">
+			<h3>01:30 P.M - 02:30 P.M</h3>
 
-    	<p>En esta hora y media me pondre a hacer el resto de los deberes de la casa que me quedaron</p>
-    </div>
+			<p>En esta hora me dedicare a mi estudio autodidacta de el desarrollo web y vere algunos videos sobre
+				psicologia</p>
+		</div>
 
-    <div class="estudio">
-    	<h3>04:00 P.M - 08:00</h3>
+		<div class="estudio">
+			<h3>02:30 P.M - 04:00</h3>
 
-    	<p>En este lapso pasare tiempo con mi familia y comeré</p>
-    </div>
+			<p>En esta hora y media me pondre a hacer el resto de los deberes de la casa que me quedaron</p>
+		</div>
 
-    <div class="estudio">
-    	<h3>08:00 P.M - 10:00</h3>
+		<div class="estudio">
+			<h3>04:00 P.M - 08:00</h3>
 
-    	<p>Despues levanto la mesa y me preparo para salir un rato a distraerme</p>
-    </div>
+			<p>En este lapso pasare tiempo con mi familia y comeré</p>
+		</div>
 
-      <div class="estudio">
-    	<h3>10:00 P.M - 11:00</h3>
+		<div class="estudio">
+			<h3>08:00 P.M - 10:00</h3>
 
-    	<p>En este tiempo ya me estare preparando para dormir, me bañare y hare las cosas necesarias</p>
-    </div>
+			<p>Despues levanto la mesa y me preparo para salir un rato a distraerme</p>
+		</div>
+
+		<div class="estudio">
+			<h3>10:00 P.M - 11:00</h3>
+
+			<p>En este tiempo ya me estare preparando para dormir, me bañare y hare las cosas necesarias</p>
+		</div>
 
 
 
-</div>
+	</div>
 </body>
+
 </html>
